# learning-agents

./: README.md  docker-compose.yml  pyproject.toml
sample_data/: dvd-rental-sample-database-diagram.avif  questions.md
sql_agents/: api.py
sql_agents/agent/: sql_agent.py
sql_agents/prompts/: system_prompts.py
sql_agents/static/: index.html
sql_agents/tools/: sql_tools.py
sql_agents/utils/: config.py  database.py
